samples/_failures_safe/1761096687_f65ad9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da2f2121.c: In function ‘main’:
./samples/SAFE/__tmp_da2f2121.c:153:31: error: expected ‘)’ at end of input
  153 |     initialize_graph(&g, nodes
      |                     ~         ^
      |                               )
./samples/SAFE/__tmp_da2f2121.c:153:5: error: expected declaration or statement at end of input
  153 |     initialize_graph(&g, nodes
      |     ^~~~~~~~~~~~~~~~
